Fix settings button on small screens

--- a/public/stylesheets/variant.sass
+++ b/public/stylesheets/variant.sass
@@ -76,6 +76,9 @@ figure.diagram-container > .diagram
 .settings-btn
   padding: 6px 7px 0 7px
 
+.settings-btn-small
+  padding: 0 3px
+
 .white-turn
   background-color: white
 
